--- a/server/package.json
+++ b/server/package.json
@@ -1,9 +1,16 @@
 {
-  "dependencies": {
-    "express": "^4.18.2",
-    "md5": "^2.3.0",
-    "pg": "^8.11.3",
-    "socket.io": "^4.7.5",
-    "sqlite3": "^5.1.7"
-  }
+    "dependencies": {
+        "@types/jest": "^29.5.12",
+        "express": "^4.18.2",
+        "md5": "^2.3.0",
+        "pg": "^8.11.3",
+        "socket.io": "^4.7.5",
+        "sqlite3": "^5.1.7"
+    },
+    "devDependencies": {
+        "jest": "^29.7.0"
+    },
+    "scripts": {
+        "test": "jest"
+    }
 }
