--- a/client/package.json
+++ b/client/package.json
@@ -8,12 +8,11 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
     "@types/md5": "^2.3.5",
     "@types/node": "^16.18.52",
-    "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@types/three": "^0.156.0",
+    "jest": "^27.5.1",
     "md5": "^2.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -21,7 +20,6 @@
     "setimmediate": "^1.0.5",
     "socket.io-client": "^4.7.5",
     "three": "^0.157.0",
-    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -47,5 +45,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "@types/react": "^18.3.3",
+    "@types/testing-library__react": "^10.2.0",
+    "typescript": "^5.4.5"
   }
 }
